
parameters:
- modified meaning of parameter presolving/probing/maxtotaluseless
- new parameter branching/inference/conflictweight
- heuristics with freq = 0 and freqofs > 0 are now called in depth level freqofs instead of being called in the root node

features:
- changed handling of added constraints in separation calls

Makefile:
- included version number in binary file name

fixed bugs:
- fixed bug in ZIMPL model reader with wrong chdir, if .zpl file is in current directory
- fixed bug in LP file reader with signed values without space between sign and value (e.g. "+2x" instead of "+ 2x")
- fixed various bugs in LP file reader
- also removed history_length, if NO_REMOVE_HISTORY is defined to support older versions of the readline library
- removed bug in implication addition
- fixed wrong assert with implications that imply a fixed variable
- fixed numerics in check method of linear constraint handler
- hopefully fixed bug with wrong path slash '/' under Windows
- fixed numerics in probing and linear constraint handler (rentacar was detected to be infeasible in presolving)
- fixed bug with calling heuristics in depths smaller than their frequency offset

known bugs:
- if one uses column generation and restarts, a solution that contains variables that are only present in the transformed
  problem (i.e., variables that were generated by a pricer) is not pulled back into the original space correctly, since
  the priced variables have no original counterpart


SCIP version 0.80
=================

interface:
- MAJOR CHANGE:
  preceeded all data types with "SCIP_" - you may use shell script reptypes_scip.sh to rename the SCIP data types in
  your own source code (But use with care! Create a backup copy of your source first!)
- additional parameter "validnode" for SCIPaddConsLocal() and SCIPaddConsNode()
- new method SCIPgetNConflictClausesApplied()
- new method SCIPdelVar()
- new method SCIPgetVarStrongbranchLPAge()
- new method SCIPgetNConflictClausesApplied()